# CarbonDioxide

./: AverageCalculator.cpp  AverageCalculator.h  CMakeLists.txt  CarbonDioxideSensor.cpp  CarbonDioxideSensor.h  README.md  main.cpp  main.qml
